[HHH-3272] using of Integer.valueOf(int), which is not available in JDK 1.4
git-svn-id: https://svn.jboss.org/repos/hibernate/core/trunk@14657 1b8cb986-b30d-0410-93ca-fae66ebed9b2